--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ regex = "1.3.1"
 reqwest = "0.10.0-alpha.1"
 select = "0.4.3"
 tokio = "0.2.0-alpha.6"
+serde_json = "1.0.41"
+serde = { version = "1.0.102", features = ["derive"] }
+failure = "0.1.6"
