--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ tokio = "0.2.0-alpha.6"
 serde_json = "1.0.41"
 serde = { version = "1.0.102", features = ["derive"] }
 failure = "0.1.6"
+chrono = "0.4.9"
