--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,15 @@ name = "nicodo"
 path = "src/main.rs"
 
 [dependencies]
-clap = "2.33.0"
+clap = "3.0.0-beta.1"
 lazy_static = "1.4.0"
-quick-xml = "0.17.0"
-regex = "1.3.1"
-reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
-select = "0.4.3"
-tokio = "0.2.0-alpha.6"
-serde_json = "1.0.41"
-serde = { version = "1.0.102", features = ["derive"] }
-failure = "0.1.6"
-chrono = "0.4.9"
-dirs = "2.0.2"
+quick-xml = "0.18.1"
+regex = "1.3.9"
+reqwest = { version = "0.10.6", features = ["json"] }
+scraper = "0.12.0"
+tokio = { version = "0.2.21", features = ["macros", "fs", "blocking"] }
+serde_json = "1.0.56"
+serde = { version = "1.0.114", features = ["derive"] }
+chrono = "0.4.11"
+dirs = "3.0.0"
+thiserror = "1.0.20"
